Remove summary and seoSummary from Learn docs

--- a/files/en-us/learn/common_questions/what_is_a_web_server/index.html
+++ b/files/en-us/learn/common_questions/what_is_a_web_server/index.html
@@ -6,9 +6,8 @@ tags:
   - Infrastructure
   - needsSchema
 ---
-<div class="summary">
-<p><span class="seoSummary">In this article, we explain what web servers are, how web servers work, and why they are important.</span></p>
-</div>
+
+<p>In this article, we explain what web servers are, how web servers work, and why they are important.</p>
 
 <table>
  <tbody>
