--- a/files/en-us/learn/performance/css/index.html
+++ b/files/en-us/learn/performance/css/index.html
@@ -9,7 +9,7 @@ tags:
 ---
 <p>{{LearnSidebar}}{{PreviousMenuNext("Learn/Performance/html", "Learn/Performance/fonts", "Learn/Performance")}} {{draft}}</p>
 
-<p>Painting an unstyled page, and then repainting it once styles are parsed would be bad user experience. For this reason, <span class="seoSummary">CSS is render blocking</span>, unless the browser knows the CSS is not currently needed. The browser can paint the page once it has downloaded the CSS and built the CSS object model. Browsers follow a specific rendering path: paint only occurs after layout, which occurs after the render tree is created, which in turn requires both the DOM and the CSSOM trees. <span class="seoSummary">To optimize the CSSOM construction, remove unnecessary styles, minify, compress and cache it, and split CSS not required at page load into additional files to reduce CSS render blocking.</span></p>
+<p>Painting an unstyled page, and then repainting it once styles are parsed would be bad user experience. For this reason, CSS is render blocking, unless the browser knows the CSS is not currently needed. The browser can paint the page once it has downloaded the CSS and built the CSS object model. Browsers follow a specific rendering path: paint only occurs after layout, which occurs after the render tree is created, which in turn requires both the DOM and the CSSOM trees. To optimize the CSSOM construction, remove unnecessary styles, minify, compress and cache it, and split CSS not required at page load into additional files to reduce CSS render blocking.</p>
 
 <h3 id="Optimizing_for_render_blocking">Optimizing for render blocking</h3>
 
