--- a/files/en-us/learn/common_questions/pages_sites_servers_and_search_engines/index.html
+++ b/files/en-us/learn/common_questions/pages_sites_servers_and_search_engines/index.html
@@ -8,9 +8,8 @@ tags:
   - NeedsActiveLearning
   - WebMechanics
 ---
-<div class="summary">
-<p><span class="seoSummary">In this article, we describe various web-related concepts: web pages, websites, web servers, and search engines. These terms are often confused by newcomers to the web or are incorrectly used. Let's learn what they each mean!</span></p>
-</div>
+
+<p>In this article, we describe various web-related concepts: web pages, websites, web servers, and search engines. These terms are often confused by newcomers to the web or are incorrectly used. Let's learn what they each mean!</p>
 
 <table>
  <tbody>
