--- a/files/en-us/learn/forms/advanced_form_styling/index.html
+++ b/files/en-us/learn/forms/advanced_form_styling/index.html
@@ -14,7 +14,7 @@ tags:
 
 <div>{{PreviousMenuNext("Learn/Forms/Styling_web_forms", "Learn/Forms/UI_pseudo-classes", "Learn/Forms")}}</div>
 
-<p><span class="seoSummary">In this article, we will see what can be done with CSS to style the types of form control that are more difficult to style — the "bad" and "ugly" categories.</span> As we saw <a href="/en-US/docs/Learn/Forms/Styling_web_forms"> in the previous article</a>, text fields and buttons are perfectly easy to style; now we will dig into styling the bits that are more problematic.</p>
+<p>In this article, we will see what can be done with CSS to style the types of form control that are more difficult to style — the "bad" and "ugly" categories. As we saw <a href="/en-US/docs/Learn/Forms/Styling_web_forms"> in the previous article</a>, text fields and buttons are perfectly easy to style; now we will dig into styling the bits that are more problematic.</p>
 
 <table>
  <tbody>
