--- a/files/en-us/learn/forms/ui_pseudo-classes/index.html
+++ b/files/en-us/learn/forms/ui_pseudo-classes/index.html
@@ -14,7 +14,7 @@ tags:
 ---
 <p>{{LearnSidebar}}{{PreviousMenuNext("Learn/Forms/Advanced_form_styling", "Learn/Forms/Form_validation", "Learn/Forms")}}</p>
 
-<p>In the previous articles, we covered the styling of various form controls, in a general manner. This included some usage of pseudo-classes, for example using <code>:checked</code> to target a checkbox only when it is selected. <span class="seoSummary">In this article, we will explore in detail the different UI pseudo-classes available to us in modern browsers for styling forms in different states.</span></p>
+<p>In the previous articles, we covered the styling of various form controls, in a general manner. This included some usage of pseudo-classes, for example using <code>:checked</code> to target a checkbox only when it is selected. In this article, we will explore in detail the different UI pseudo-classes available to us in modern browsers for styling forms in different states.</p>
 
 <table>
  <tbody>
