--- a/files/en-us/learn/server-side/first_steps/introduction/index.html
+++ b/files/en-us/learn/server-side/first_steps/introduction/index.html
@@ -14,7 +14,7 @@ tags:
 
 <div>{{NextMenu("Learn/Server-side/First_steps/Client-Server_overview", "Learn/Server-side/First_steps")}}</div>
 
-<p><span class="seoSummary">Welcome to the MDN beginner's server-side programming course! In this first article, we look at server-side programming from a high level, answering questions such as "what is it?", "how does it differ from client-side programming?", and "why it is so useful?". After reading this article you'll understand the additional power available to websites through server-side coding.</span></p>
+<p>Welcome to the MDN beginner's server-side programming course! In this first article, we look at server-side programming from a high level, answering questions such as "what is it?", "how does it differ from client-side programming?", and "why it is so useful?". After reading this article you'll understand the additional power available to websites through server-side coding.</p>
 
 <table>
  <tbody>
