Learn area: fix warnings

--- a/files/en-us/learn/css/building_blocks/images_media_form_elements/index.html
+++ b/files/en-us/learn/css/building_blocks/images_media_form_elements/index.html
@@ -100,7 +100,7 @@ tags:
 <p>{{EmbedGHLiveSample("css-examples/learn/images/form.html", '100%', 1000)}}</p>
 
 <div class="notecard warning">
-<p><strong>Important</strong>: You should take care when changing the styling of form elements to make sure it is still obvious to the user they are form elements. You could create a form input with no borders and background that is almost indistinguishable from the content around it, but this would make it very hard to recognise and fill in.</p>
+<p><strong>Warning:</strong> You should take care when changing the styling of form elements to make sure it is still obvious to the user they are form elements. You could create a form input with no borders and background that is almost indistinguishable from the content around it, but this would make it very hard to recognise and fill in.</p>
 </div>
 
 <p>As explained in the lessons on <a href="/en-US/docs/Learn/Forms/Styling_web_forms">form styling</a> in the HTML part of this course, many of the more complex input types are rendered by the operating system and are inaccessible to styling. You should therefore always assume that forms are going to look quite different for different visitors and test complex forms in a number of browsers.</p>
@@ -151,7 +151,7 @@ textarea {
   font-family: inherit;
   font-size: 100%;
   box-sizing: border-box;
-  padding: 0; 
+  padding: 0;
   margin: 0;
 }
 
