--- a/files/en-us/learn/css/first_steps/how_css_is_structured/index.html
+++ b/files/en-us/learn/css/first_steps/how_css_is_structured/index.html
@@ -247,7 +247,7 @@ p {
 <p>Setting CSS properties to specific values is the primary way of defining layout and styling for a document. The CSS engine calculates which declarations apply to every single element of a page.</p>
 
 <div class="notecard warning">
-<p><strong>Important:</strong> CSS properties and values are case-sensitive. The property and value in each pair are separated by a colon. (<code>:</code>)</p>
+<p><strong>Warning:</strong> CSS properties and values are case-sensitive. The property and value in each pair are separated by a colon. (<code>:</code>)</p>
 </div>
 
 <p><strong>Look up different values of properties listed below. Write CSS rules that apply styling to different HTML elements: </strong></p>
@@ -261,11 +261,11 @@ p {
 </ul>
 
 <div class="warning">
-<p><strong>Important</strong>: If a property is unknown, or if a value is not valid for a given property, the declaration is processed as <em>invalid</em>. It is completely ignored by the browser's CSS engine.</p>
+<p><strong>Warning:</strong> If a property is unknown, or if a value is not valid for a given property, the declaration is processed as <em>invalid</em>. It is completely ignored by the browser's CSS engine.</p>
 </div>
 
 <div class="warning">
-<p><strong>Important</strong>: In CSS (and other web standards), it has been agreed that US spelling is the standard where there is language variation or uncertainty. For example, <code>colour</code> should be spelled <code>color</code>, as <code>colour</code> will not work.</p>
+<p><strong>Warning:</strong> In CSS (and other web standards), it has been agreed that US spelling is the standard where there is language variation or uncertainty. For example, <code>colour</code> should be spelled <code>color</code>, as <code>colour</code> will not work.</p>
 </div>
 
 <h3 id="Functions">Functions</h3>
@@ -382,7 +382,7 @@ background-attachment: fixed;</pre>
 <p><strong>Try using the declarations (above) in your own CSS exercise to become more familiar with how it works. You can also experiment with different values.</strong></p>
 
 <div class="notecard warning">
-<p><strong>Warning</strong>: One less obvious aspect of using CSS shorthand is how omitted values reset. A value not specified in CSS shorthand reverts to its initial value. This means an omission in CSS shorthand can <strong>override previously set values</strong>.</p>
+<p><strong>Warning:</strong> One less obvious aspect of using CSS shorthand is how omitted values reset. A value not specified in CSS shorthand reverts to its initial value. This means an omission in CSS shorthand can <strong>override previously set values</strong>.</p>
 </div>
 
 <h2 id="Comments">Comments</h2>
@@ -492,7 +492,7 @@ div p + p {padding-top: 0;}
 <p>For your own projects, you will format your code according to personal preference. For team projects, you may find that a team or project has its own style guide.</p>
 
 <div class="notecard warning">
-<p><strong>Important:</strong> Though white space separates values in CSS declarations, <strong>property names never have white space</strong>.</p>
+<p><strong>Warning:</strong> Though white space separates values in CSS declarations, <strong>property names never have white space</strong>.</p>
 </div>
 
 <p>For example, these declarations are valid CSS:</p>
