--- a/files/en-us/learn/getting_started_with_the_web/javascript_basics/index.html
+++ b/files/en-us/learn/getting_started_with_the_web/javascript_basics/index.html
@@ -42,7 +42,7 @@ tags:
 <p>However, getting comfortable with JavaScript is more challenging than getting comfortable with HTML and CSS. You may have to start small, and progress gradually. To begin, let's examine how to add JavaScript to your page for creating a <em>Hello world!</em> example. (<em>Hello world!</em> is<a href="https://en.wikipedia.org/wiki/%22Hello,_World!%22_program"> the standard for introductory programming examples</a>.)</p>
 
 <div class="warning">
-<p><strong>Important</strong>: If you haven't been following along with the rest of our course, <a href="https://github.com/mdn/beginner-html-site-styled/archive/gh-pages.zip">download this example code</a> and use it as a starting point.</p>
+<p><strong>Warning:</strong> If you haven't been following along with the rest of our course, <a href="https://github.com/mdn/beginner-html-site-styled/archive/gh-pages.zip">download this example code</a> and use it as a starting point.</p>
 </div>
 
 <ol>
@@ -79,7 +79,7 @@ myHeading.textContent = 'Hello world!';</pre>
 <p>To give you a better understanding of how JavaScript works, let's explain some of the core features of the language. It's worth noting that these features are common to all programming languages. If you master these fundamentals, you have a head start on coding in other languages too!</p>
 
 <div class="warning">
-<p><strong>Important</strong>: In this article, try entering the example code lines into your JavaScript console to see what happens. For more details on JavaScript consoles, see <a href="/en-US/docs/Learn/Common_questions/What_are_browser_developer_tools">Discover browser developer tools</a>.</p>
+<p><strong>Warning:</strong> In this article, try entering the example code lines into your JavaScript console to see what happens. For more details on JavaScript consoles, see <a href="/en-US/docs/Learn/Common_questions/What_are_browser_developer_tools">Discover browser developer tools</a>.</p>
 </div>
 
 <h3 id="Variables">Variables</h3>
