--- a/files/en-us/learn/html/howto/add_a_hit_map_on_top_of_an_image/index.html
+++ b/files/en-us/learn/html/howto/add_a_hit_map_on_top_of_an_image/index.html
@@ -26,7 +26,7 @@ tags:
 </table>
 
 <div class="warning">
-<p>This article discusses client-side image maps only. Do not use server-side image maps, which require the user to have a mouse.</p>
+<p><strong>Warning:</strong> This article discusses client-side image maps only. Do not use server-side image maps, which require the user to have a mouse.</p>
 </div>
 
 <h2 id="Image_maps_and_their_drawbacks">Image maps, and their drawbacks</h2>
