--- a/files/en-us/learn/html/introduction_to_html/document_and_website_structure/index.html
+++ b/files/en-us/learn/html/introduction_to_html/document_and_website_structure/index.html
@@ -211,7 +211,7 @@ play, the lights should be down low]&lt;/span&gt;.&lt;/p&gt;</pre>
 <p>This isn't really an <code>&lt;aside&gt;</code>, as it doesn't necessarily relate to the main content of the page (you want it viewable from anywhere). It doesn't even particularly warrant using a  <code>&lt;section&gt;</code>, as it isn't part of the main content of the page. So a <code>&lt;div&gt;</code> is fine in this case. We've included a heading as a signpost to aid screenreader users in finding it.</p>
 
 <div class="warning">
-<p><strong>Warning</strong>: Divs are so convenient to use that it's easy to use them too much. As they carry no semantic value, they just clutter your HTML code. Take care to use them only when there is no better semantic solution and try to reduce their usage to the minimum otherwise you'll have a hard time updating and maintaining your documents.</p>
+<p><strong>Warning:</strong> Divs are so convenient to use that it's easy to use them too much. As they carry no semantic value, they just clutter your HTML code. Take care to use them only when there is no better semantic solution and try to reduce their usage to the minimum otherwise you'll have a hard time updating and maintaining your documents.</p>
 </div>
 
 <h3 id="Line_breaks_and_horizontal_rules">Line breaks and horizontal rules</h3>
