--- a/files/en-us/learn/javascript/building_blocks/looping_code/index.html
+++ b/files/en-us/learn/javascript/building_blocks/looping_code/index.html
@@ -278,7 +278,7 @@ para.textContent = info;
 </div>
 
 <div class="warning">
-<p><strong>Important</strong>: With for — as with all loops — you must make sure that the initializer is incremented or, depending on the case, decremented, so that it eventually reaches the point where the condition is not true. If not, the loop will go on forever, and either the browser will force it to stop, or it will crash. This is called an <strong>infinite loop</strong>.</p>
+<p><strong>Warning:</strong> With for — as with all loops — you must make sure that the initializer is incremented or, depending on the case, decremented, so that it eventually reaches the point where the condition is not true. If not, the loop will go on forever, and either the browser will force it to stop, or it will crash. This is called an <strong>infinite loop</strong>.</p>
 </div>
 
 <h2 id="Exiting_loops_with_break">Exiting loops with break</h2>
@@ -456,7 +456,7 @@ do {
 </div>
 
 <div class="warning">
-<p><strong>Important</strong>: With while and do...while — as with all loops — you must make sure that the initializer is incremented or, depending on the case, decremented, so the condition eventually becomes false. If not, the loop will go on forever, and either the browser will force it to stop, or it will crash. This is called an <strong>infinite loop</strong>.</p>
+<p><strong>Warning:</strong> With while and do...while — as with all loops — you must make sure that the initializer is incremented or, depending on the case, decremented, so the condition eventually becomes false. If not, the loop will go on forever, and either the browser will force it to stop, or it will crash. This is called an <strong>infinite loop</strong>.</p>
 </div>
 
 <h2 id="Active_learning_Launch_countdown">Active learning: Launch countdown</h2>
