--- a/files/en-us/learn/javascript/objects/object_prototypes/index.html
+++ b/files/en-us/learn/javascript/objects/object_prototypes/index.html
@@ -152,7 +152,7 @@ tags:
 </div>
 
 <div class="warning">
-<p><strong>Important</strong>: The <code>prototype</code> property is one of the most confusingly-named parts of JavaScript — you might think that it points to the prototype object of the current object, but it doesn't (that's an internal object that can be accessed by <code>__proto__</code>, remember?). <code>prototype</code> instead is a property containing an object on which you define members that you want to be inherited.</p>
+<p><strong>Warning:</strong> The <code>prototype</code> property is one of the most confusingly-named parts of JavaScript — you might think that it points to the prototype object of the current object, but it doesn't (that's an internal object that can be accessed by <code>__proto__</code>, remember?). <code>prototype</code> instead is a property containing an object on which you define members that you want to be inherited.</p>
 </div>
 
 <h2 id="Revisiting_create">Revisiting create()</h2>
