--- a/files/en-us/learn/tools_and_testing/cross_browser_testing/testing_strategies/index.html
+++ b/files/en-us/learn/tools_and_testing/cross_browser_testing/testing_strategies/index.html
@@ -281,7 +281,7 @@ tags:
 <p><img alt="" src="virtualbox-installer.png"></p>
 
 <div class="warning">
-<p><strong>Important</strong>: You need to make sure you have the operating system image you want to install on the virtual machine available at this point, and install it right away. If you cancel the process at this point, it can render the virtual machine unusable, and make it so you need to delete it and create it again. This is not fatal, but it is annoying.</p>
+<p><strong>Warning:</strong> You need to make sure you have the operating system image you want to install on the virtual machine available at this point, and install it right away. If you cancel the process at this point, it can render the virtual machine unusable, and make it so you need to delete it and create it again. This is not fatal, but it is annoying.</p>
 </div>
 
 <p>After the process has completed, you should have a virtual machine running an operating system inside a window on your host computer.</p>
