--- a/files/en-us/learn/forms/how_to_structure_a_web_form/index.html
+++ b/files/en-us/learn/forms/how_to_structure_a_web_form/index.html
@@ -39,7 +39,7 @@ tags:
 
 <p>We already met this in the previous article.</p>
 
-<div class="warning"><strong>Warning:</strong> It's strictly forbidden to nest a form inside another form. Nesting can cause forms to behave in an unpredictable manner, so it is a bad idea.</div>
+<div class="warning"><p><strong>Warning:</strong> It's strictly forbidden to nest a form inside another form. Nesting can cause forms to behave in an unpredictable manner, so it is a bad idea.</p></div>
 
 <p>It's always possible to use a form control outside of a {{HTMLElement("form")}} element. If you do so, by default that control has nothing to do with any form unless you associate it with a form using the <a href="/en-US/docs/Web/HTML/Attributes/form"><code>form</code></a> attribute. This was introduced to let you explicitly bind a control with a form even if it is not nested inside it.</p>
 
