--- a/files/en-us/learn/tools_and_testing/cross_browser_testing/accessibility/index.html
+++ b/files/en-us/learn/tools_and_testing/cross_browser_testing/accessibility/index.html
@@ -138,7 +138,7 @@ This is the second subsection of my content. I think it is more interesting than
 </ul>
 
 <div class="warning">
-<p><strong>Important</strong>: You should perform this kind of test/review on any new page you write — make sure that functionality can be accessed by the keyboard, and that the tab order provides a sensible navigation path through the document.</p>
+<p><strong>Warning:</strong> You should perform this kind of test/review on any new page you write — make sure that functionality can be accessed by the keyboard, and that the tab order provides a sensible navigation path through the document.</p>
 </div>
 
 <p>This example highlights the importance of using the correct semantic element for the correct job. It is possible to style <em>any</em> element to look like a link or button with CSS, and to behave like a link or button with JavaScript, but they won't actually be links or buttons, and you'll lose a lot of the accessibility these elements give you for free. So don't do it if you can avoid it.</p>
