Learn area: fix dl elements

--- a/files/en-us/learn/common_questions/what_is_a_url/index.html
+++ b/files/en-us/learn/common_questions/what_is_a_url/index.html
@@ -123,41 +123,47 @@ https://developer.mozilla.org/en-US/search?q=URL</pre>
 
 <h3 id="Examples_of_absolute_URLs">Examples of absolute URLs</h3>
 
-<dl>
- <dt>Full URL (the same as the one we used before)</dt>
- <dd>
- <pre>https://developer.mozilla.org/en-US/docs/Learn</pre>
- </dd>
- <dt>Implicit protocol</dt>
- <dd>
- <pre>//developer.mozilla.org/en-US/docs/Learn</pre>
-
- <p>In this case, the browser will call that URL with the same protocol as the one used to load the document hosting that URL.</p>
- </dd>
- <dt>Implicit domain name</dt>
- <dd>
- <pre>/en-US/docs/Learn</pre>
-
- <p>This is the most common use case for an absolute URL within an HTML document. The browser will use the same protocol and the same domain name as the one used to load the document hosting that URL. <strong>Note:</strong> <em>it isn't possible to omit the domain name without omitting the protocol as well</em>.</p>
- </dd>
-</dl>
+<table>
+  <tr>
+    <td>Full URL (the same as the one we used before)</td>
+    <td><pre>https://developer.mozilla.org/en-US/docs/Learn</pre></td>
+  </tr>
+  <tr>
+    <td>Implicit protocol</td>
+    <td>
+     <pre>//developer.mozilla.org/en-US/docs/Learn</pre>
+     <p>In this case, the browser will call that URL with the same protocol as the one used to load the document hosting that URL.</p>
+   </td>
+  </tr>
+  <tr>
+    <td>Implicit domain name</td>
+    <td>
+     <pre>/en-US/docs/Learn</pre>
+     <p>This is the most common use case for an absolute URL within an HTML document. The browser will use the same protocol and the same domain name as the one used to load the document hosting that URL. <strong>Note:</strong> <em>it isn't possible to omit the domain name without omitting the protocol as well</em>.</p>
+   </td>
+  </tr>
+</table>
 
 <h3 id="Examples_of_relative_URLs">Examples of relative URLs</h3>
 
 <p>To better understand the following examples, let's assume that the URLs are called from within the document located at the following URL: <code>https://developer.mozilla.org/en-US/docs/Learn</code></p>
 
-<dl>
- <dt>Sub-resources</dt>
- <dd>
- <pre>Skills/Infrastructure/Understanding_URLs</pre>
- Because that URL does not start with <code>/</code>, the browser will attempt to find the document in a sub-directory of the one containing the current resource. So in this example,  we really want to reach this URL: <code>https://developer.mozilla.org/en-US/docs/Learn/Skills/Infrastructure/Understanding_URLs</code></dd>
- <dt>Going back in the directory tree</dt>
- <dd>
- <pre>../CSS/display</pre>
-
- <p>In this case, we use the <code>../</code> writing convention — inherited from the UNIX file system world — to tell the browser we want to go up from one directory. Here we want to reach this URL: <code>https://developer.mozilla.org/en-US/docs/Learn/../CSS/display</code>, which can be simplified to: <code>https://developer.mozilla.org/en-US/docs/CSS/display</code></p>
- </dd>
-</dl>
+<table>
+  <tr>
+    <td>Sub-resources</td>
+    <td>
+      <pre>Skills/Infrastructure/Understanding_URLs</pre>
+      <p>Because that URL does not start with <code>/</code>, the browser will attempt to find the document in a sub-directory of the one containing the current resource. So in this example,  we really want to reach this URL: https://developer.mozilla.org/en-US/docs/Learn/Skills/Infrastructure/Understanding_URLs.</p>
+   </td>
+  </tr>
+  <tr>
+    <td>Going back in the directory tree</td>
+    <td>
+      <pre>../CSS/display</pre>
+      <p>In this case, we use the <code>../</code> writing convention — inherited from the UNIX file system world — to tell the browser we want to go up from one directory. Here we want to reach this URL: https://developer.mozilla.org/en-US/docs/Learn/../CSS/display, which can be simplified to: https://developer.mozilla.org/en-US/docs/CSS/display.</p>
+   </td>
+  </tr>
+</table>
 
 <h2 id="Semantic_URLs">Semantic URLs</h2>
 
