--- a/files/en-us/learn/forms/how_to_build_custom_form_controls/index.html
+++ b/files/en-us/learn/forms/how_to_build_custom_form_controls/index.html
@@ -31,49 +31,37 @@ tags:
 
 <p>In terms of behavior, we are recreating a native HTML element. Therefore it should have the same behaviors and semantics as the native HTML element. We require our control to be usable with a mouse as well as with a keyboard, and comprehensible to a screen reader, just like any native control. Let's start by defining how the control reaches each state:</p>
 
-<dl>
- <dt>The control is in its normal state when:</dt>
- <dd>
- <ul>
+<p><strong>The control is in its normal state when:</strong></p>
+<ul>
   <li>the page loads.</li>
   <li>the control was active and the user clicks anywhere outside it.</li>
   <li>the control was active and the user moves the focus to another control using the keyboard (e.g. the <kbd>Tab</kbd> key).</li>
- </ul>
- </dd>
- <dt>The control is in its active state when:</dt>
- <dd>
- <ul>
-  <li>the user clicks on it or touches it on a touch screen.</li>
-  <li>the user hits the tab key and it gains focus.</li>
-  <li>the control was in its open state and the user clicks on it.</li>
- </ul>
- </dd>
- <dt>The control is in its open state when:</dt>
- <dd>
- <ul>
-  <li>the control is in any other state than open and the user clicks on it.</li>
- </ul>
- </dd>
-</dl>
+</ul>
+
+<p><strong>The control is in its active state when:</strong></p>
+<ul>
+ <li>the user clicks on it or touches it on a touch screen.</li>
+ <li>the user hits the tab key and it gains focus.</li>
+ <li>the control was in its open state and the user clicks on it.</li>
+</ul>
+<p><strong>The control is in its open state when:</strong></p>
+<ul>
+ <li>the control is in any other state than open and the user clicks on it.</li>
+</ul>
 
 <p>Once we know how to change states, it is important to define how to change the control's value:</p>
 
-<dl>
- <dt>The value changes when:</dt>
- <dd>
- <ul>
-  <li>the user clicks on an option when the control is in the open state.</li>
-  <li>the user hits the up or down arrow keys when the control is in its active state.</li>
- </ul>
- </dd>
- <dt>The value does not change when:</dt>
- <dd>
- <ul>
-  <li>the user hits the up arrow key when the first option is selected.</li>
-  <li>the user hits the down arrow key when the last option is selected.</li>
- </ul>
- </dd>
-</dl>
+<p><strong>The value changes when:</strong></p>
+<ul>
+ <li>the user clicks on an option when the control is in the open state.</li>
+ <li>the user hits the up or down arrow keys when the control is in its active state.</li>
+</ul>
+
+<p><strong>The value does not change when:</strong></p>
+<ul>
+ <li>the user hits the up arrow key when the first option is selected.</li>
+ <li>the user hits the down arrow key when the last option is selected.</li>
+</ul>
 
 <p>Finally, let's define how the control's options will behave:</p>
 
