--- a/files/en-us/mozilla/firefox/releases/93/index.html
+++ b/files/en-us/mozilla/firefox/releases/93/index.html
@@ -86,7 +86,7 @@ tags:
 <h3 id="webdriver_conformance_marionette">WebDriver conformance (Marionette)</h3>
 
 <ul>
-  <li>Fixed a bug, which caused `WebDriver:Print` to fail for large documents ({{bug 1721982}}).</li>
+  <li>Fixed a bug, which caused `WebDriver:Print` to fail for large documents ({{bug(1721982)}}).</li>
 </ul>
 
 <h4 id="removals_webdriver">Removals</h4>
