WebDriver conformance changes for Firefox 93 (#9414)

--- a/files/en-us/mozilla/firefox/releases/93/index.html
+++ b/files/en-us/mozilla/firefox/releases/93/index.html
@@ -86,6 +86,10 @@ tags:
 
 <h3 id="webdriver_conformance_marionette">WebDriver conformance (Marionette)</h3>
 
+<ul>
+  <li>Fixed a bug which caused <code>WebDriver:Print</code> to fail for large documents ({{bug(1721982)}}).</li>
+</ul>
+
 <h4 id="removals_webdriver">Removals</h4>
 
 <h2 id="Changes_for_add-on_developers">Changes for add-on developers</h2>
